  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28223] mips: clone does not align stack
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28338] undefined behavior in __tzfile_compute with oddball TZif file
  [28340] ld.so crashes while loading a DSO with a read-only dynamic section
  [28357] deadlock between pthread_create and ELF constructors
  [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
  [28407] pthread_kill assumes that kill and tgkill are equivalent
  [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
  [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
  [28607] Masked signals are delivered on thread exit
  [28678] nptl/tst-create1 hangs sporadically
  [28700] "dns [!UNAVAIL=return] files" NSS default for hosts is not useful
  [28702] RISC-V: clone does not align stack
  [28703] RISC-V: _dl_init might be called with unaligned stack
  [28704] elf/tst-cpu-features-cpuinfo fails for KVM guests on some AMD systems
  [28707] assert in tzfile.c __tzfile_read striking with truncated timezones
  [28744] A64FX string functions are selected without SVE HWCAP
  [28755] overflow bug in wcsncmp_avx2 and wcsncmp_evex
  [28771] %ebx optimization macros are incompatible with .altmacro
  [28768] CVE-2022-23218: Buffer overflow in sunrpc svcunix_create
  [28769] CVE-2021-3999: Off-by-one buffer overflow/underflow in getcwd()
  [28770] CVE-2021-3998: Unexpected return value from realpath() for too long results
  [28784] x86: crash in 32bit memset-sse2.s when the cache size can not be determined


Version 2.34

Major new features:

* In order to support smoother in-place-upgrades and to simplify
  the implementation of the runtime all functionality formerly
  implemented in the libraries libpthread, libdl, libutil, libanl has
  been integrated into libc.  New applications do not need to link with